tests/ui/kindck/kindck-copy.stderr
error[E0277]: the trait `Copy` is not implemented for `&mut isize`
  --> $DIR/kindck-copy.rs:27:19
   |
LL |     assert_copy::<&'static mut isize>();
   |                   ^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&mut isize`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`
help: consider removing the leading `&`-reference
   |
LL -     assert_copy::<&'static mut isize>();
LL +     assert_copy::<isize>();
   |

error[E0277]: the trait `Copy` is not implemented for `&mut isize`
  --> $DIR/kindck-copy.rs:28:19
   |
LL |     assert_copy::<&'a mut isize>();
   |                   ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&mut isize`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`
help: consider removing the leading `&`-reference
   |
LL -     assert_copy::<&'a mut isize>();
LL +     assert_copy::<isize>();
   |

error[E0277]: the trait `Copy` is not implemented for `Box<isize>`
  --> $DIR/kindck-copy.rs:31:19
   |
LL |     assert_copy::<Box<isize>>();
   |                   ^^^^^^^^^^ the trait `Copy` is not implemented for `Box<isize>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `String`
  --> $DIR/kindck-copy.rs:32:19
   |
LL |     assert_copy::<String>();
   |                   ^^^^^^ the trait `Copy` is not implemented for `String`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `Vec<isize>`
  --> $DIR/kindck-copy.rs:33:19
   |
LL |     assert_copy::<Vec<isize> >();
   |                   ^^^^^^^^^^ the trait `Copy` is not implemented for `Vec<isize>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `Box<&mut isize>`
  --> $DIR/kindck-copy.rs:34:19
   |
LL |     assert_copy::<Box<&'a mut isize>>();
   |                   ^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<&mut isize>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `Box<dyn Dummy>`
  --> $DIR/kindck-copy.rs:42:19
   |
LL |     assert_copy::<Box<dyn Dummy>>();
   |                   ^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<dyn Dummy>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `Box<dyn Dummy + Send>`
  --> $DIR/kindck-copy.rs:43:19
   |
LL |     assert_copy::<Box<dyn Dummy + Send>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<dyn Dummy + Send>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `&mut dyn Dummy + Send`
  --> $DIR/kindck-copy.rs:46:19
   |
LL |     assert_copy::<&'a mut (dyn Dummy + Send)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&mut dyn Dummy + Send`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `MyNoncopyStruct`
  --> $DIR/kindck-copy.rs:64:19
   |
LL |     assert_copy::<MyNoncopyStruct>();
   |                   ^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `MyNoncopyStruct`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error[E0277]: the trait `Copy` is not implemented for `Rc<isize>`
  --> $DIR/kindck-copy.rs:67:19
   |
LL |     assert_copy::<Rc<isize>>();
   |                   ^^^^^^^^^ the trait `Copy` is not implemented for `Rc<isize>`
   |
note: required by a bound in `assert_copy`
  --> $DIR/kindck-copy.rs:5:18
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ^^^^ required by this bound in `assert_copy`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0277`.
